--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.0",
-        "liamwli/php-bitcoin":"1.0.2",
+        "liamwli/php-bitcoin":"1.0.2"
     },
     "autoload": {
         "psr-4": {
